# automated_content_creator

./: .gitignore  README.txt  quote_audio.py  requirements.txt  video_creator.py
assets/music/: sage.excalidraw
crews/image_agent/: .gitignore  README.md  generated_images.md  prompts.md  pyproject.toml  scenic_ideas.md
crews/image_agent/knowledge/: user_preference.txt
crews/image_agent/src/image_agent/: crew.py  main.py
crews/image_agent/src/image_agent/config/: agents.yaml  tasks.yaml
crews/image_agent/src/image_agent/tools/: dalle_tool.py
crews/quote_agent/: README.md  pyproject.toml  quotes.md  quotes2.md  selected_author.md
crews/quote_agent/src/quote_agent/: crew.py  main.py
crews/quote_agent/src/quote_agent/config/: agents.yaml  tasks.yaml
