[project]
name = "quote_agent"
version = "0.1.0"
description = "quote_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
quote_agent = "quote_agent.main:run"
run_crew = "quote_agent.main:run"
train = "quote_agent.main:train"
replay = "quote_agent.main:replay"
test = "quote_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
